--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ FB_REDIRECT_URL=https://birji-new-backend.herokuapp.com/api/auth/facebook/redire
 GOOGLE_CLIENT_ID=17653774292-bccpjf4gsostl4k0kai84bm8vul7656e.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=kfYpyBDYge9fV3Bb7w6PcYRn
 GOOGLE_REDIRECT_URL=https://birji-new-backend.herokuapp.com/api/auth/google/redirect
+
+
+FRONT_URL=https://birji-new-backend.herokuapp.com
