--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "class-validator": "^0.12.2",
     "lodash": "^4.17.20",
     "passport": "^0.4.1",
+    "passport-apple": "^1.1.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-twitter": "^1.0.4",
     "passport-vkontakte": "^0.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
