--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/database/ormconfig.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config -n src/database/orm.config.ts",
+    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed -n src/database/orm.config.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -38,6 +41,7 @@
     "class-validator": "^0.12.2",
     "express-session": "^1.17.1",
     "lodash": "^4.17.20",
+    "nestjs-typeorm-paginate": "^2.2.6",
     "passport": "^0.4.1",
     "passport-apple": "^1.1.1",
     "passport-facebook": "^3.0.0",
@@ -51,7 +55,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.5",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -59,6 +64,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/express-session": "^1.17.3",
+    "@types/faker": "^5.1.5",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
@@ -75,7 +81,8 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "jest": {
     "moduleFileExtensions": [
